# sha-p2pool

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENSE  README.md  ci_all.sh  log4rs_sample.yml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: build_binaries.json  build_binaries.yml  ci.yml  integration_tests.yml
crates/grpc/: Cargo.toml  build.rs
crates/grpc/proto/: p2pool.proto
crates/grpc/src/: lib.rs
crates/sha_p2pool/: Cargo.toml  build.rs
crates/sha_p2pool/proto/: block.proto  sharechain.proto
crates/sha_p2pool/src/: main.rs
crates/sha_p2pool/src/server/: config.rs  mod.rs  server.rs
crates/sha_p2pool/src/server/grpc/: base_node.rs  error.rs  mod.rs  p2pool.rs
crates/sha_p2pool/src/server/p2p/: client.rs  error.rs  messages.rs  mod.rs  p2p.rs  peer_store.rs
crates/sha_p2pool/src/sharechain/: error.rs  in_memory.rs  mod.rs
crates/sha_p2pool/src/sharechain/grpc/: mod.rs
data/node1/configs/: logs.yml
scripts/: cross_compile_ubuntu_18-pre-build.sh  file_license_check.sh  install_ubuntu_dependencies-cross_compile.sh  install_ubuntu_dependencies-rust-arm64.sh  install_ubuntu_dependencies-rust.sh
src/: main.rs
src/cli/: args.rs  mod.rs  util.rs
src/cli/commands/: generate_identity.rs  list_squads.rs  list_tribes.rs  mod.rs  start.rs  util.rs
src/server/: config.rs  grpc.rs  mod.rs  p2p.rs  server.rs  stats_store.rs
src/server/grpc/: base_node.rs  error.rs  mod.rs  p2pool.rs  util.rs
src/server/http/: health.rs  mod.rs  server.rs  stats_collector.rs  version.rs
src/server/http/stats/: cache.rs  handlers.rs  mod.rs  models.rs  server.rs
src/server/p2p/: client.rs  error.rs  global_ip.rs  messages.rs  mod.rs  network.rs  p2p.rs  peer_store.rs  relay_store.rs  util.rs
src/sharechain/: block.rs  block_level.rs  error.rs  in_memory.rs  mod.rs  p2block.rs  p2chain.rs  p2chain_level.rs  pool_block.rs  pool_chain.rs
src/sharechain/tests/: mod.rs  test.rs
