[package]
name = "sha_p2pool"
version = "0.1.0"
edition = "2021"

[dependencies]
#sha_p2pool_grpc = { path = "../sha_p2pool_grpc" }
#minotari_app_grpc = { git = "https://github.com/tari-project/tari.git" }
#minotari_node_grpc_client = { git = "https://github.com/tari-project/tari.git" }
minotari_app_grpc = { git = "https://github.com/ksrichard/tari.git", branch = "p2pool" }
minotari_node_grpc_client = { git = "https://github.com/ksrichard/tari.git", branch = "p2pool" }
tari_core = { git = "https://github.com/ksrichard/tari.git", branch = "p2pool" }

tari_crypto = "0.20.1"
tari_common_types = { git = "https://github.com/tari-project/tari.git" }
tari_common = { git = "https://github.com/tari-project/tari.git" }
tari_utilities = { version = "0.7", features = ["borsh"] }

libp2p = { version = "0.53.2", features = [
    "dns",
    "identify",
    "macros",
    "tokio",
    "serde",
    "noise",
    "tcp",
    "yamux",
    "mdns",
    "gossipsub",
    "request-response",
    "json",
    "cbor",
    "kad"
] }
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0"
serde = "1.0.203"
anyhow = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
tonic = "0.8.3"
async-trait = "0.1.80"
serde_cbor = "0.11.2"
blake2 = "0.10.6"
digest = "0.10.7"
clap = { version = "4.5.7", features = ["derive"] }
moka = { version = "0.12.7", features = ["future"] }
rand = "0.8.0"


