[package]
name = "sha_p2pool"
version = "0.1.0"
edition = "2021"

[dependencies]
#sha_p2pool_grpc = { path = "../sha_p2pool_grpc" }
#minotari_app_grpc = { git = "https://github.com/tari-project/tari.git" }
#minotari_node_grpc_client = { git = "https://github.com/tari-project/tari.git" }
#tari_common_types = { git = "https://github.com/tari-project/tari.git" }

minotari_app_grpc = { git = "https://github.com/ksrichard/tari.git", branch = "p2pool" }
minotari_node_grpc_client = { git = "https://github.com/ksrichard/tari.git", branch = "p2pool" }
tari_common_types = { git = "https://github.com/ksrichard/tari.git", branch = "p2pool" }
tari_core = { git = "https://github.com/ksrichard/tari.git", branch = "p2pool" }

libp2p = { version = "0.53.2", features = [
    "dns",
    "identify",
    "macros",
    "tokio",
    "serde",
    "noise",
    "tcp",
    "yamux",
    "mdns",
    "gossipsub",
    "kad"
] }
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0"
serde = "1.0.203"
anyhow = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
tonic = { workspace = true }


